1.06
 - First version (moved from MetaTrans perl module).